[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sfx/Player_Killed.wav" type="AudioStream" id=2]
[ext_resource path="res://Sfx/Player_Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Sfx/Reload.wav" type="AudioStream" id=4]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/colored-transparent_packed.png-1060d93744aaf71fba5a21ff77972f02.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 4 )

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/colored-transparent_packed.png-1060d93744aaf71fba5a21ff77972f02.stex"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 7 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GunSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GunSprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GunSprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodySprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodySprite:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ), Vector2( 16, 0 ), Vector2( 16, -16 ), Vector2( 24, 4 ), Vector2( 28, 0 ), Vector2( 32, 4 ), Vector2( 34, 2 ), Vector2( 36, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 180.0, 360.0, 180.0, 90.0, 180.0, 210.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodySprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 5, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, -70.0, -90.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.44998, 0.49998 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.44998, 0.49998 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 2 ), Vector2( -2, 2 ), Vector2( 2, -2 ), Vector2( -2, -2 ), Vector2( -2, 2 ), Vector2( 2, -2 ), Vector2( 2, 2 ), Vector2( 0, 0 ), Vector2( 2, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "reload"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 16, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GunSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 2 ), Vector2( 1.2, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="BodySprite" type="Sprite" parent="."]
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 432, 64, 16, 16 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="GunSprite" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 16, 0 )
texture = SubResource( 3 )
region_enabled = true
region_rect = Rect2( 592, 144, 16, 16 )

[node name="Mussle" type="Position2D" parent="GunSprite"]
position = Vector2( 6, -1.5 )

[node name="HitBox" type="Area2D" parent="."]

[node name="HitBoxCollision" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 6 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 8.0
neighbor_dist = 4.0
max_speed = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move"
anims/RESET = SubResource( 4 )
anims/die = SubResource( 8 )
anims/hit = SubResource( 5 )
anims/move = SubResource( 9 )
anims/reload = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 320

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="KilledSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0

[node name="ReloadSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="finished" from="KilledSFX" to="." method="_on_KilledSFX_finished"]
